# PulseMesh

./: .gitignore  LICENSE  README.md  fix_ci.py  pyproject.toml
.github/workflows/: ci.yml
agnt-plugin/: README.md  alerts.js  artifacts.js  cache.js  dashboard.js  engine.js  fusion.js  local.js  manifest.json  models.js  package-lock.json  package.json  providers.js  pulsemesh-agnt.js  reports.js  synthetic.js  test-engine.js  util.js
agnt-plugin/profiles/: agnt-default.json
agnt-plugin/scripts/: build.js
docs/: operator-guide.md
docs/contracts/: README.md  baseline-contract.md  profile-contract.md  provider-result-contract.md  summary-contract.md
examples/: profiles.csv.json  profiles.ingestion.json  profiles.local.json  profiles.offline.json  profiles.rich.json  profiles.system.json  sample_events.jsonl  sample_sensor.csv
schemas/: baseline.schema.json  profile.schema.json  provider-result.schema.json  summary.schema.json
scripts/: demo.ps1  install-dev.ps1  test.ps1
src/pulsemesh/: __init__.py  alerts.py  artifacts.py  baselines.py  cache.py  cli.py  dashboard.py  fusion.py  history.py  local.py  models.py  providers.py  reports.py  schemas.py  streams.py  synthetic.py  util.py
tests/: test_alerts.py  test_baselines.py  test_demo_cli.py  test_fusion.py  test_history_streams.py  test_profiles.py  test_reports.py  test_schemas_dashboard.py
