[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsemesh"
version = "0.1.0"
description = "Adaptive multi-source telemetry acquisition, fusion, and artifact generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "James Jackson" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
visuals = ["matplotlib>=3.8"]
dev = ["pytest>=8"]

[project.scripts]
pulsemesh = "pulsemesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

