[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsemesh"
version = "0.1.0"
description = "Adaptive multi-source telemetry acquisition, fusion, and artifact generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "James Jackson" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
visuals = ["matplotlib>=3.8"]
mqtt = ["paho-mqtt>=2"]
serial = ["pyserial>=3.5"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
pulsemesh = "pulsemesh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_strict_optional = true
